# Document-Retrieval-RAG-System

./: .gitignore  README.md
rag-backend/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  start.py
rag-backend/app/: main.py
rag-backend/app/api/: chat.py  config.py  docs.py  query.py
rag-backend/app/core/: config.py
rag-backend/app/schemas/: chat.py  doc.py
rag-backend/app/services/: chat_service.py  doc_service.py
rag-backend/app/utils/: doc_parser.py
rag-backend/config/: app.yaml
rag-frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
rag-frontend/src/: App.vue  main.ts  style.css  vite-env.d.ts
rag-frontend/src/api/: chat.ts  doc.ts  query.ts
rag-frontend/src/components/: DocUpload.vue
rag-frontend/src/router/: index.ts
rag-frontend/src/store/: docStore.ts
rag-frontend/src/stores/: chat.ts
rag-frontend/src/types/: doc.ts
rag-frontend/src/utils/: request.ts
rag-frontend/src/views/: Chat.vue  DocManage.vue  RagQuery.vue
